--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rename-utility",
-  "version": "1.0.6",
+  "version": "1.0.6a",
   "description": "\"A Tool For Renaming Multiple Files At Once\"",
   "main": "app.js",
   "scripts": {
